--- a/week3/week3.vcxproj
+++ b/week3/week3.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="3-1.cpp" />
     <ClCompile Include="3-2.cpp" />
     <ClCompile Include="3-3.cpp" />
+    <ClCompile Include="3-4.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
